tests/sema/fail/v3_fail_u32_literal_range.ep
# COMPILE_FAIL: let x expected u32, got i64; use u32(... ) for an explicit conversion

fun main(): i64 {
    let x: u32 = -1
    ret x
}
